some minor bugfixes, templates improvements & zebra default config file changes

--- a/misc/translator/po/prog_intranet_fr_FR.po
+++ b/misc/translator/po/prog_intranet_fr_FR.po
@@ -1,3 +1,4 @@
+# translation of prog_intranet_fr_FR.po to
 # translation of prog_intranet_fr_FR_10.po to
 # translation of prog_intranet_fr_FR_9.po to
 # translation of prog_intranet_fr_FR_7bis.po to
@@ -14,9 +15,9 @@
 # paul POULAIN <paul@koha-fr.org>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: prog_intranet_fr_FR_10\n"
+"Project-Id-Version: prog_intranet_fr_FR\n"
 "POT-Creation-Date: 2007-05-18 16:21+0200\n"
-"PO-Revision-Date: 2007-05-23 18:02+0200\n"
+"PO-Revision-Date: 2007-05-29 16:31+0200\n"
 "Last-Translator: paul POULAIN <paul@koha-fr.org>\n"
 "Language-Team:  <fr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -5442,7 +5443,7 @@ msgstr "Choisir le fichier à parcourir."
 #. SCRIPT
 #: ../../koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl:646
 msgid "Choose Hemisphere:"
-msgstr "Choisir l'hémisphère : "
+msgstr "Choisir hémisphère : "
 
 #: ../../koha-tmpl/intranet-tmpl/prog/en/cataloguing/addbooks.tmpl:30
 msgid "Choose a Framework:"
@@ -19090,7 +19091,7 @@ msgstr "n- Nouveau"
 #. SCRIPT
 #: ../../koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl:1057
 msgid "need to check for irregularity by clicking 'Irregularity?'"
-msgstr "Vous devez vérifier les irrégularités en cliquant sur \"Irrégularités?\""
+msgstr "Vous devez vérifier les irrégularités en cliquant sur 'Irrégularités?'"
 
 #. SCRIPT
 #: ../../koha-tmpl/intranet-tmpl/prog/en/serials/subscription-add.tmpl:1057
