french translation .po
Signed-off-by: Chris Cormack <crc@liblime.com>
Signed-off-by: Joshua Ferraro <jmf@liblime.com>

--- a/misc/translator/po/prog_opac_fr.po
+++ b/misc/translator/po/prog_opac_fr.po
@@ -1,6 +1,7 @@
-# translation of prog_opac_fr.po to
+# translation of prog_opac_fr.po to fr_FR
 # POULAIN <paul@koha-fr.org>, 2006, 2007.
 # paul POULAIN <paul@koha-fr.org>, 2007.
+# translation of prog_opac_fr.po to
 # translation of prog_opac_fr_6.po to
 # translation of prog_opac_fr_5.po~.po to
 # translation of prog_opac_fr_5.po to
@@ -11,9 +12,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: prog_opac_fr\n"
 "POT-Creation-Date: 2007-07-02 10:24+0200\n"
-"PO-Revision-Date: 2007-07-02 10:27+0200\n"
-"Last-Translator: paul POULAIN <paul@koha-fr.org>\n"
-"Language-Team:  <fr@li.org>\n"
+"PO-Revision-Date: 2007-10-04 10:54+0200\n"
+"Last-Translator: POULAIN <paul@koha-fr.org>\n"
+"Language-Team: fr_FR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2318,7 +2319,7 @@ msgstr "N° de parution"
 #: ../../koha-tmpl/opac-tmpl/prog/en/includes/masthead.inc:16
 #: ../../koha-tmpl/opac-tmpl/prog/en/opac-tags_subject.tmpl:13
 msgid "OK"
-msgstr "OUI"
+msgstr "OK"
 
 #. %1$s: TMPL_VAR name=cardnumber
 #: ../../koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl:172
